# evloop-lint

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/adr/: 0001-standalone-cli-not-ruff-plugin.md  0002-custom-call-resolver.md  0003-optimistic-default-verdict.md  0004-loop-fitness-dual-metric-benchmark.md  0005-generalization-holdout.md  0006-three-confidence-tiers.md  0007-loop-autonomy-bounded-batches.md  0008-uniform-optimism-entry-points.md  0009-offload-inverse-taint-with-eager-eval.md  0010-loop-governance-floors-and-gates.md
scripts/: adversarial_break.wf.js
src/evloop_lint/: __init__.py  cli.py  codes.py  config.py  engine.py  findings.py  framework.py  ir.py  registry.py  report.py  resolver.py  suppress.py  taint.py  visitor.py
tests/: harness.py  test_adversarial.py  test_detection.py
