[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evloop-lint"
version = "0.1.0"
description = "Detect synchronous, event-loop-blocking calls reachable from async code in FastAPI / async-Python projects, including deeply nested interprocedural cases."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "evloop-lint" }]
keywords = ["fastapi", "asyncio", "linter", "event-loop", "static-analysis", "blocking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# Runtime is stdlib-only (ast, tokenize, tomllib, concurrent.futures).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
evloop-lint = "evloop_lint.cli:main"

[project.urls]
Homepage = "https://github.com/agusmdev/evloop-lint"
Repository = "https://github.com/agusmdev/evloop-lint"
Issues = "https://github.com/agusmdev/evloop-lint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/evloop_lint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
